src/objects/Log__c.object
<CustomObject>
    <description>R3 - Log object for exception tracking purpose.</description>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>R3 - Class_Name</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Line__c</fullName>
        <description>R3 - Error Line</description>
        <label>Error Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Error__c</fullName>
        <description>R3 - Full_Error</description>
        <label>Full Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Error_Line__c</columns>
        <columns>Full_Error__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Log # - {0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>